# kimmdy-reactions-spec-binding

./: README.md  setup.cfg
src/specbond/: kimmdy-yaml-schema.json  reaction.py
tests/: test_default_reactions.py
tests/polymer/: BD_relax.mdp  conf0.gro  crosslinks.itp  index.ndx  kimmdy.yml  kimmdy.yml~  topol.top
tests/polymer/kimmdy_001/: kimmdy.history
tests/polymer/kimmdy_001/0_setup/: .kimmdy_done  .kimmdy_started  topol.top
tests/polymer/kimmdy_001/10_specbond/: .kimmdy_done  .kimmdy_started  toppar.ff
tests/polymer/kimmdy_001/11_decide_recipe/: .kimmdy_done  .kimmdy_started  radicals.json
tests/polymer/kimmdy_001/12_apply_recipe/: .kimmdy_done  .kimmdy_started  topol.top
tests/polymer/kimmdy_001/1_equilibrium/: .kimmdy_done  .kimmdy_started  equilibrium.edr  equilibrium.gro  equilibrium.tpr  mdout.mdp
tests/polymer/kimmdy_001/2_specbond/: .kimmdy_done  .kimmdy_started
tests/polymer/kimmdy_001/3_decide_recipe/: .kimmdy_done  .kimmdy_started  radicals.json
tests/polymer/kimmdy_001/4_apply_recipe/: .kimmdy_done  .kimmdy_started  topol.top
tests/polymer/kimmdy_001/5_equilibrium/: .kimmdy_done  .kimmdy_started  equilibrium.edr  equilibrium.gro  equilibrium.tpr  mdout.mdp
tests/polymer/kimmdy_001/6_specbond/: .kimmdy_done  .kimmdy_started
tests/polymer/kimmdy_001/7_decide_recipe/: .kimmdy_done  .kimmdy_started  radicals.json
tests/polymer/kimmdy_002/: kimmdy.history
tests/polymer/kimmdy_003/: kimmdy.history
tests/polymer/kimmdy_004/: kimmdy.history
tests/polymer/kimmdy_005/: kimmdy.history
tests/polymer/toppar.ff/: polymer.itp
(+140 files in other folders)
