[metadata]
name = specbond
version = 0.5.0
license = MIT
description = Reaction template for KIMMDY
description_content_type = text/markdown
long_description = file: README.md
long_description_content_type = text/markdown
author = Camilo Aponte
author_email = camilo.aponte@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    MDAnalysis

python_requires = >= 3.9

[options.package_data]
specbond =
    *.json

[options.packages.find]
where=src

[options.entry_points]
kimmdy.reaction_plugins =
    specbond = specbond.reaction:SpecBond
